--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.mongodb.connection-string=mongodb://localhost:27017
+quarkus.mongodb.connection-string=mongodb://mongo_db:27017
 quarkus.mongodb.database=order-service
 quarkus.artemis.url=tcp://0.0.0.0:61616
 quarkus.artemis.username=itartemis
